# home-dashboard

./: .gitignore  CLAUDE.md  README.md
backend/: Cargo.toml
backend/src/: main.rs
deployment/: DEPLOY.md  README.md  check-services.sh  filebrowser.service  home-dashboard-backend.service  nanobot.service  nginx.conf  setup-filebrowser.sh  supabase-schema.sql
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BandwidthCard.tsx  LanDevices.tsx  NanobotCard.tsx  NanobotDetailModal.tsx  SdWearCard.tsx  ServiceModal.tsx  ServiceStatusCard.tsx  ServicesGrid.tsx  SshMonitorCard.tsx  StremioCard.tsx  SystemMonitor.tsx  TailscaleCard.tsx  TopProcessesCard.tsx  UptimeMonitor.tsx  WeatherCard.tsx
frontend/lib/: types.ts
frontend/lib/supabase/: client.ts
stremio/: README.md  ecosystem.config.js  setup-stremio.sh
